try to fix jumping font-size on mobile

--- a/stadsarkiv_client/static/css/search.css
+++ b/stadsarkiv_client/static/css/search.css
@@ -33,7 +33,7 @@ details>summary.inactive {
 }
 
 summary {
-    font-size: 1.05rem;
+    font-size: 14px;
 }
 
 .facets details {
